Update runtime